[package]
name = "reth_bsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "reth_bsc"
path = "src/lib.rs"


[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["serde"] }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["test-utils"] }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["test-utils"] }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["test-utils"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

revm = { version = "27.0.3", default-features = false }

# alloy dependencies
alloy-chains = { version = "0.2.5", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-rpc-types = { version = "1.0.23", features = ["eth"], default-features = false }
alloy-rpc-types-engine = { version = "1.0.23", default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }


# crypto
enr = { version = "0.13", default-features = false }
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery", "std"] }

# tokio
tokio = { version = "1.44.2", default-features = false }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }

# misc
bytes = { version = "1.5", default-features = false }
clap = "4"
eyre = "0.6"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = "0.4"
thiserror = { version = "2.0.0", default-features = false }
parking_lot = "0.12"
ahash = "0.8.12"

dashmap = "6.1.0"

rand = "0.9"

tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.13"
protobuf-src = "2"

[[bench]]
name = "block_store_benchmark"
harness = false


[features]
serde = [
    "reth-ethereum-forks/serde",
    "reth-ethereum-primitives/serde",
    "reth-primitives-traits/serde",
    "secp256k1/serde",
]
